# binance-rs-plus

./: .travis.yml  Cargo.toml  README-CN.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: websocket_benchmark.rs
examples/: binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_futures_websockets.rs  binance_save_all_trades.rs  binance_websockets.rs
src/: account.rs  api.rs  async_websocket_client.rs  client.rs  config.rs  errors.rs  general.rs  lib.rs  market.rs  model.rs  savings.rs  userstream.rs  util.rs  websockets.rs
src/futures/: account.rs  general.rs  market.rs  userstream.rs  websockets.rs
tests/: account_tests.rs  futures_account_tests.rs  futures_general_tests.rs  futures_market_test.rs  general_tests.rs  market_tests.rs  util_tests.rs
