[package]
name = "binance-rs-plus"
version = "0.1.2"
license = "MIT"
authors = ["codegpt<codegpt@gmail.com>"]
rust-version = "1.87.0"
edition = "2024"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance-rs-plus/"
repository = "https://github.com/Praying/binance-rs-plus"
readme = "README.md"

[badges]
travis-ci = { repository = "Praying/binance-rs-plus" }

[lib]
name = "binance_rs_plus"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.39"
futures-util = "0.3.30" # Added
hex = "0.4"
hmac = "0.12.1"
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
url = "2.5.0"


[dev-dependencies]
csv = "1.3.0"
mockito = "1.4.0"
env_logger = "0.11.2"
criterion = "0.6"
float-cmp = "0.10.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
